revision-derive/tests/compile_fail/history_duplicate.stderr
error: duplicate revision number 1
 --> tests/compile_fail/history_duplicate.rs:4:36
  |
4 | #[revisioned(revision(1), revision(1))]
  |                                    ^
